# rust-grpc-v2

./: Cargo.toml  README.md  build.rs
protos/: hello.proto
src/: client.rs  server.rs
